--- a/src/main/resources/css/window.css
+++ b/src/main/resources/css/window.css
@@ -1,87 +1,129 @@
-.menu-bar {
-  -fx-background-color: #3B3F42;
-  -fx-border-color: #272B2E;
-  -fx-padding: 0;
+/*
+ * Copyright (C) 2017  TextMd
+ *
+ * This file is part of TextMd.
+ *
+ * TextMd is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
+.check-menu-item, .menu-item {
+    -fx-mark-color: #f8f8f2;
+}
+
+.menu-bar, .toolbar, .toolbar-button {
+    -fx-background-color: #3B3F42;
+    -fx-border-color: #272B2E;
+    -fx-padding: 0;
 }
 
 .menu-bar .container .menu-button .label {
-  -fx-text-fill: #f8f8f2;
+    -fx-text-fill: #f8f8f2;
+}
+
+.context-menu .separator *.line{
+    -fx-border-color: #464A4D;
+    -fx-border-style: solid;
+    -fx-border-width: 0 0 1 0;
+    -fx-padding: 0;
 }
 
 .menu-item .label {
-  -fx-text-fill: #f8f8f2;
+    -fx-text-fill: #f8f8f2;
 }
 
 .context-menu {
-  -fx-skin: "com.sun.javafx.scene.control.skin.ContextMenuSkin";
-  -fx-background-color: #3B3F42;
-  -fx-border-color: #464A4D;
-  -fx-border-width: 2px;
+    -fx-skin: "com.sun.javafx.scene.control.skin.ContextMenuSkin";
+    -fx-background-color: #545454;
+    -fx-border-color: #464A4D;
+    -fx-border-width: 1px;
 }
 
-.scroll-bar:horizontal, .scroll-bar:vertical{
-  -fx-background-color: #3B3F42;
+.scroll-bar:horizontal, .scroll-bar:vertical {
+    -fx-background-color: #3B3F42;
 }
 
 .increment-button, .decrement-button {
-  -fx-background-color: #3C3D3F;
-  -fx-border-color: transparent;
+    -fx-background-color: #3C3D3F;
+    -fx-border-color: transparent;
 }
 
 .scroll-bar:horizontal .track,
-.scroll-bar:vertical .track{
-  -fx-background-color: transparent;
-  -fx-border-color: transparent;
-  -fx-background-radius: 0em;
+.scroll-bar:vertical .track {
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+    -fx-background-radius: 0em;
 }
 
 .scroll-bar:horizontal .thumb,
 .scroll-bar:vertical .thumb {
-  -fx-background-color: #545454;
-  -fx-background-radius: 5em;
+    -fx-background-color: #545454;
+    -fx-background-radius: 5em;
 }
 
 .scroll-bar .corner {
-  -fx-background-color: #3C3D3F;
+    -fx-background-color: #3C3D3F;
 }
 
 .split-pane:horizontal .split-pane-divider {
-  -fx-background-color: #545454;
+    -fx-background-color: #545454;
 }
 
 .split-pane {
-  -fx-padding: 0;
+    -fx-padding: 0;
 }
 
 .tab-pane *.tab-header-area *.tab-header-background {
-  -fx-background-color: #3B3F42;
-  -fx-border-width: 0 0 1 0;
-  -fx-border-color: #464A4D;
+    -fx-background-color: #3B3F42;
+    -fx-border-width: 0 0 1 0;
+    -fx-border-color: #464A4D;
 }
 
 .tab-pane {
-  -fx-tab-min-width:80px;
-  -fx-tab-max-width:200px;
-  -fx-tab-min-height:23px;
-  -fx-tab-max-height:23px;
-  -fx-background-color: #2B2B2B;
+    -fx-tab-min-width: 80px;
+    -fx-tab-max-width: 200px;
+    -fx-tab-min-height: 23px;
+    -fx-tab-max-height: 23px;
+    -fx-background-color: #2B2B2B;
 }
 
 .tab {
-  -fx-font-size: 13;
-  -fx-background-color: #2B2B2B;
-  -fx-background-radius: 0;
+    -fx-font-size: 13;
+    -fx-background-color: #2B2B2B;
+    -fx-background-radius: 0;
 }
 
 .tab:selected {
-  -fx-background-color: #545454;
+    -fx-background-color: #545454;
 }
 
 .tab-pane:focused .tab-header-area .headers-region .tab:selected .focus-indicator {
-  -fx-focus-color: transparent;
-  -fx-faint-focus-color: transparent;
+    -fx-focus-color: transparent;
+    -fx-faint-focus-color: transparent;
 }
 
 .tab-pane:top *.tab-header-area {
-  -fx-padding: 0 0 0 0;
+    -fx-padding: 0 0 0 0;
+}
+
+.toolbar {
+    -fx-border-width: 1 0 0 0;
+}
+
+.toolbar-button {
+    -fx-border-width: 1;
+}
+
+.toolbar-view-selector-label {
+    -fx-text-fill: #f8f8f2;
 }
