--- a/src/main/resources/css/window.css
+++ b/src/main/resources/css/window.css
@@ -27,6 +27,10 @@
     -fx-padding: 0;
 }
 
+.menu-bar {
+    -fx-border-width: 0 0 1 0;
+}
+
 .menu-bar .container .menu-button .label {
     -fx-text-fill: #f8f8f2;
 }
@@ -127,5 +131,9 @@
 
 
 .toolbar-view-selector-label {
+    -fx-text-fill: #f8f8f2;
+}
+
+.caret-pos-label {
     -fx-text-fill: #f8f8f2;
 }
